assignment1/cloudformation.yaml
Resources:
  # KeyPair:
  #   Type: AWS::EC2::KeyPair
  #   Properties: 
  #     KeyName: CloudFormationKeyPair
  # VPC:
  #   Type: AWS::EC2::VPC
  #   Properties:
  #     CidrBlock: '10.0.0.0/16' #allow 10.0.0.0 to 10.0.255.255 for the VPC */16 is in bytes and for the mask
  # PublicSubnetOne:
  #   Type: AWS::EC2::Subnet
  #   Properties:
  #     VpcId: !Ref VPC
  #     CidrBlock: '10.0.1.0/24' #allow 10.0.1.0 to 10.0.1.255
  #     AvailabilityZone: !Select [ 0, !GetAZs '' ]
  #     Tags:
  #       - Key: Name
  #         Value: PublicSubnetOne

  #     MapPublicIpOnLaunch: true

  # InternetGateway:
  #   Type: AWS::EC2::InternetGateway

  # GatewayAttachement:
  #   Type: AWS::EC2::VPCGatewayAttachment
  #   Properties:
  #     VpcId: !Ref 'VPC'
  #     InternetGatewayId: !Ref 'InternetGateway'



  # PublicSubnetTwo:
  #   Type: AWS::EC2::Subnet
  #   Properties:
  #     VpcId: !Ref VPC
  #     CidrBlock: '10.0.2.0/24' #allow
  #     AvailabilityZone: !Select [ 1, !GetAZs '' ]
  #     Tags:
  #       - Key: Name
  #         Value: PublicSubnetTwo
  #     MapPublicIpOnLaunch: true




  Ec2Instance:
    Type: 'AWS::EC2::Instance'
    Properties:
      Tags:
        - Key: Name
          Value: WebServer
      SecurityGroups:
        - !Ref InstanceSecurityGroup
      KeyName: testCloudformation_manual
      ImageId: ami-005f9685cb30f234b
      InstanceType: t2.micro
      UserData: !Base64 |
        #!/bin/bash
        yum update -y
        amazon-linux-extras install -y lamp-mariadb10.2-php7.2 php7.2
        service httpd start
        yum install -y httpd mariadb-server php-mbstring php-xml
        systemctl start httpd
        systemctl enable httpd
        usermod -a -G apache ec2-user
        chown -R ec2-user:apache /var/www
        chmod 2775 /var/www
        find /var/www -type d -exec sudo chmod 2775 {} \;
        find /var/www -type f -exec sudo chmod 0664 {} \;
        echo "<?php echo '<h2>Welcome to COS80001. Installed PHP version: ' . phpversion() . '</h2>'; ?>" > /var/www/html/phpinfo.php


  InstanceSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      Tags:
        - Key: Name
          Value: WebServer-SG
      GroupDescription: Enable SSH and HTTP access
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 21
          ToPort: 21
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
