assignment1/cloudformation_cheating.yaml
Resources:
  PublicSubnetTwo:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: '10.0.2.0/24' #allow
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      Tags:
        - Key: Name
          Value: PublicSubnetTwo
      MapPublicIpOnLaunch: true




  Ec2Instance:
    Type: 'AWS::EC2::Instance'
    Properties:
      Tags:
        - Key: Name
          Value: WebServer
      SecurityGroups:
        - !Ref InstanceSecurityGroup
      KeyName: testCloudformation_manual
      ImageId: ami-005f9685cb30f234b
      InstanceType: t2.micro
      UserData: !Base64 |
        #!/bin/bash
        yum update -y
        amazon-linux-extras install -y lamp-mariadb10.2-php7.2 php7.2
        service httpd start
        yum install -y httpd mariadb-server php-mbstring php-xml
        systemctl start httpd
        systemctl enable httpd
        usermod -a -G apache ec2-user
        chown -R ec2-user:apache /var/www
        chmod 2775 /var/www
        find /var/www -type d -exec sudo chmod 2775 {} \;
        find /var/www -type f -exec sudo chmod 0664 {} \;
        echo "<?php echo '<h2>Welcome to COS80001. Installed PHP version: ' . phpversion() . '</h2>'; ?>" > /var/www/html/phpinfo.php
        echo '<!doctypehtml><html lang="en"><head><meta charset="utf-8"><title>Photo Album</title></head><body><h2>Photo lookup</h2><form id="upload"name="upload"><fieldset><dl><dt><label for="phototitle">Photo title:</label></dt><dd><input id="phototitle"name="phototitle"size="25"></dd><dt><label for="keyword">Keyword:</label></dt><dd><input id="keyword"name="keyword"size="25"></dd><dt><label for="fromdate">From Date:</label></dt><dd><input id="fromdate"name="fromdate"type="date"></dd><dt><labe [...]
        echo '<!doctypehtml><html lang="en"><head><meta charset="utf-8"><title>Photo Album</title></head><body><h2>Photo uploader</h2><form id="upload"name="upload"><fieldset><dl><dt><label for="phototitle">Photo title:</label></dt><dd><input id="phototitle"name="phototitle"size="25"></dd><dt><label for="selectphoto">Select a photo:</label></dt><dd><input id="selectphoto"name="selectphoto"type="file"></dd><dt><label for="description">Description:</label></dt><dd><input id="description"name="desc [...]

  InstanceSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      Tags:
        - Key: Name
          Value: WebServer-SG
      GroupDescription: Enable SSH and HTTP access
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 21
          ToPort: 21
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
